--- a/clase 7-8 y 9/index.html
+++ b/clase 7-8 y 9/index.html
@@ -17,20 +17,45 @@
 
 <body>
     <header>
+        <div class="holder">
         <img src="./img/logo.png" alt="logo de transporte" width="100px">
         <h1>Transporte X</h1>
+    </div>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
+        <ul class="holder">
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="servicio.html">Servicios</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="holder">
+        <div>
+            <img src="./img/home/img01.jpg" alt="">
+        </div>
+        <div class="columnas">
+            <section class="bienvenidos">
+            <h2>Bienvenidos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur incidunt iste nam amet harum reiciendis ipsa vitae nostrum nobis, temporibus repellendus voluptates dolor exercitationem repellat consequuntur minima autem culpa id?
+            Nesciunt quia nobis dolorum et quo doloremque voluptates beatae, reiciendis fuga quidem odio hic ab sunt? Quae voluptates sequi, excepturi ex vero mollitia aut, itaque dolorum nobis et inventore architecto.</p>
+        </section>
+        <section class="testimonios">
+            <h2>Testimonios</h2>
+            <div class="testimonio">
+                <span class="cita">
+                    Simplemente excelente
+                </span>
+                <span class="autor">
+                    Juan Gomez - zapatos.com
+                </span>
+            </div>
+        </section>
+        </div>
+        <div>
 
+        </div>
     </main>
     <footer>
         <p>Este sitio fue creado por Ana Lucia Arias-2022</p>
