--- a/clase 7-8 y 9/nosotros.html
+++ b/clase 7-8 y 9/nosotros.html
@@ -24,9 +24,9 @@
     </header>
     <nav>
         <ul class="holder">
-            <li><ahref="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a  class="active" href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -44,29 +44,33 @@
                 <div class="persona">
                     <img src="./img/nosotros/nosotros1.jpg" alt="">
                     <h5>Roberto Gomez</h5>
-                    <h6>Gerente general</h6>
+                    <h6>Gerente General</h6>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim maxime non quam qui laudantium ullam facilis tempora maiores placeat error ab totam est, repellat incidunt. Nam qui totam ut odit.</p>
                 </div>
                 <div class="persona">
                     <img src="./img/nosotros/nosotros2.jpg" alt="">
                     <h5>Diana Reyes</h5>
-                    <h6>Gerente comercial</h6>
+                    <h6>Gerente Comercial</h6>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim maxime non quam qui laudantium ullam facilis tempora maiores placeat error ab totam est, repellat incidunt. Nam qui totam ut odit.</p>
                 </div>
                 <div class="persona">
                     <img src="./img/nosotros/nosotros3.jpg" alt="">
                     <h5>Roberto Zavala</h5>
-                    <h6>Gerente comercial</h6>
+                    <h6>Gerente de Sistemas</h6>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim maxime non quam qui laudantium ullam facilis tempora maiores placeat error ab totam est, repellat incidunt. Nam qui totam ut odit.</p>
                 </div>
                 <div class="persona">
                     <img src="./img/nosotros/nosotros4.jpg" alt="">
-                    <h5>Diana Reyes</h5>
-                    <h6>Gerente comercial</h6>
+                    <h5>Sandra Martroloi</h5>
+                    <h6>Gerente de Marketing</h6>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim maxime non quam qui laudantium ullam facilis tempora maiores placeat error ab totam est, repellat incidunt. Nam qui totam ut odit.</p>
                 </div>
-                
-                
+                <div class="persona">
+                    <img src="./img/nosotros/nosotros4.jpg" alt="">
+                    <h5>Sandra Martroloi</h5>
+                    <h6>Gerente de Marketing</h6>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim maxime non quam qui laudantium ullam facilis tempora maiores placeat error ab totam est, repellat incidunt. Nam qui totam ut odit.</p>
+                </div>
             </div>
         </section>
     </main>
