--- a/clase 7-8 y 9/index.html
+++ b/clase 7-8 y 9/index.html
@@ -26,7 +26,7 @@
         <ul class="holder">
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
