--- a/clase 7-8 y 9/contacto.html
+++ b/clase 7-8 y 9/contacto.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Reem+Kufi+Fun:wght@700&family=Roboto:wght@100;400&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Contacto - Transporte AA</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -20,7 +20,7 @@
     <header>
         <div class="holder">
             <img src="./img/logo.png" alt="logo de transporte" width="100px">
-            <h1>Transporte X</h1>
+            <h1>Transporte AA</h1>
         </div>
     </header>
     <nav>
@@ -66,7 +66,7 @@
             <p>También podes contactarte con nosotros usando los siguientes medios</p>
             <ul>
                 <li> <a href="">Instagram</a> </li>
-                <li><a href="">Fcebook</a> </li>
+                <li><a href="">Facebook</a> </li>
                 <li><a href="">Twitter</a></li>
             </ul>
         </section>
