--- a/clase 7-8 y 9/index.html
+++ b/clase 7-8 y 9/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Reem+Kufi+Fun:wght@700&family=Roboto:wght@100;400&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Transporte AA</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -18,9 +18,9 @@
 <body>
     <header>
         <div class="holder">
-        <img src="./img/logo.png" alt="logo de transporte" width="100px">
-        <h1>Transporte X</h1>
-    </div>
+            <img src="./img/logo.png" alt="logo de transporte" width="100px">
+            <h1>Transporte AA</h1>
+        </div>
     </header>
     <nav>
         <ul class="holder">
@@ -37,25 +37,27 @@
         </div>
         <div class="columnas">
             <section class="bienvenidos">
-            <h2>Bienvenidos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur incidunt iste nam amet harum reiciendis ipsa vitae nostrum nobis, temporibus repellendus voluptates dolor exercitationem repellat consequuntur minima autem culpa id?
-            Nesciunt quia nobis dolorum et quo doloremque voluptates beatae, reiciendis fuga quidem odio hic ab sunt? Quae voluptates sequi, excepturi ex vero mollitia aut, itaque dolorum nobis et inventore architecto.</p>
-        </section>
-        <section class="testimonios">
-            <h2>Testimonios</h2>
-            <div class="testimonio">
-                <span class="cita">
-                    Simplemente excelente
-                </span>
-                <span class="autor">
-                    Juan Gomez - zapatos.com
-                </span>
-            </div>
-        </section>
+                <h2>Bienvenidos</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur incidunt iste nam amet harum
+                    reiciendis ipsa vitae nostrum nobis, temporibus repellendus voluptates dolor exercitationem repellat
+                    consequuntur minima autem culpa id?
+                    Nesciunt quia nobis dolorum et quo doloremque voluptates beatae, reiciendis fuga quidem odio hic ab
+                    sunt? Quae voluptates sequi, excepturi ex vero mollitia aut, itaque dolorum nobis et inventore
+                    architecto.</p>
+            </section>
+            <section class="testimonios">
+                <h2>Testimonios</h2>
+                <div class="testimonio">
+                    <span class="cita">
+                        Simplemente excelente
+                    </span>
+                    <span class="autor">
+                        Juan Gomez - zapatos.com
+                    </span>
+                </div>
+            </section>
         </div>
-        <div>
-
-        </div>
+        
     </main>
     <footer>
         <p>Este sitio fue creado por Ana Lucia Arias-2022</p>
