--- a/clase 7-8 y 9/nosotros.html
+++ b/clase 7-8 y 9/nosotros.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Reem+Kufi+Fun:wght@700&family=Roboto:wght@100;400&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Nosotros - Transporte AA</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -19,7 +19,7 @@
     <header>
         <div class="holder">
         <img src="./img/logo.png" alt="logo de transporte" width="100px">
-        <h1>Transporte X</h1>
+        <h1>Transporte AA</h1>
     </div>
     </header>
     <nav>
